--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
     </head>
     <body>
-        <h1>Projeto Inicial com o Git</h1>
+        <h1>Projeto inicial com o Git</h1>
+        
+        <p>Este é um arquivo para testar as funcionalidades do Git.</p>
     </body>
 </html>
