Teste com commit sem -m

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
         <h1>Projeto inicial com o Git</h1>
         
         <p>Este é um arquivo para testar as funcionalidades do Git.</p>
+        
+        <p>Teste de commit.</p>
     </body>
 </html>
