Alteração do nome da pasta

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <p>Este é um arquivo para testar as funcionalidades do Git.</p>
         
         <p>Teste de commit.</p>
+        
+        <p>Teste com mudança de nome de pasta.</p>
     </body>
 </html>
